Updated data to 09/21/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -213,6 +213,7 @@
 <script src=IntData_180.js></script>
 <script src=IntData_181.js></script>
 <script src=IntData_182.js></script>
+<script src=IntData_183.js></script>
 
 <script>
 
