--- a/covid19reg.html
+++ b/covid19reg.html
@@ -213,6 +213,7 @@
 <script src=RegData_180.js></script>
 <script src=RegData_181.js></script>
 <script src=RegData_182.js></script>
+<script src=RegData_183.js></script>
 
 <script>
 
