--- a/covid19state.html
+++ b/covid19state.html
@@ -156,6 +156,7 @@
 <script src=USAData_180.js></script>
 <script src=USAData_181.js></script>
 <script src=USAData_182.js></script>
+<script src=USAData_183.js></script>
 
 <script>
 
