--- a/covid19usa.html
+++ b/covid19usa.html
@@ -181,6 +181,7 @@
 <script src=USAData_180.js></script>
 <script src=USAData_181.js></script>
 <script src=USAData_182.js></script>
+<script src=USAData_183.js></script>
 
 <script>
 
