Updated data to 09/23/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -183,6 +183,7 @@
 <script src=USAData_182.js></script>
 <script src=USAData_183.js></script>
 <script src=USAData_184.js></script>
+<script src=USAData_185.js></script>
 
 <script>
 
