--- a/covid19int.html
+++ b/covid19int.html
@@ -215,6 +215,7 @@
 <script src=IntData_182.js></script>
 <script src=IntData_183.js></script>
 <script src=IntData_184.js></script>
+<script src=IntData_185.js></script>
 
 <script>
 
