--- a/covid19reg.html
+++ b/covid19reg.html
@@ -215,6 +215,7 @@
 <script src=RegData_182.js></script>
 <script src=RegData_183.js></script>
 <script src=RegData_184.js></script>
+<script src=RegData_185.js></script>
 
 <script>
 
