--- a/covid19state.html
+++ b/covid19state.html
@@ -158,6 +158,7 @@
 <script src=USAData_182.js></script>
 <script src=USAData_183.js></script>
 <script src=USAData_184.js></script>
+<script src=USAData_185.js></script>
 
 <script>
 
