Updated date to 09/24/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -216,6 +216,7 @@
 <script src=IntData_183.js></script>
 <script src=IntData_184.js></script>
 <script src=IntData_185.js></script>
+<script src=IntData_186.js></script>
 
 <script>
 
