--- a/covid19reg.html
+++ b/covid19reg.html
@@ -216,6 +216,7 @@
 <script src=RegData_183.js></script>
 <script src=RegData_184.js></script>
 <script src=RegData_185.js></script>
+<script src=RegData_186.js></script>
 
 <script>
 
