--- a/covid19state.html
+++ b/covid19state.html
@@ -159,6 +159,7 @@
 <script src=USAData_183.js></script>
 <script src=USAData_184.js></script>
 <script src=USAData_185.js></script>
+<script src=USAData_186.js></script>
 
 <script>
 
