--- a/covid19usa.html
+++ b/covid19usa.html
@@ -184,6 +184,7 @@
 <script src=USAData_183.js></script>
 <script src=USAData_184.js></script>
 <script src=USAData_185.js></script>
+<script src=USAData_186.js></script>
 
 <script>
 
