Updated data to 09/25/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -217,6 +217,7 @@
 <script src=RegData_184.js></script>
 <script src=RegData_185.js></script>
 <script src=RegData_186.js></script>
+<script src=RegData_187.js></script>
 
 <script>
 
