--- a/covid19usa.html
+++ b/covid19usa.html
@@ -185,6 +185,7 @@
 <script src=USAData_184.js></script>
 <script src=USAData_185.js></script>
 <script src=USAData_186.js></script>
+<script src=USAData_187.js></script>
 
 <script>
 
