--- a/covid19int.html
+++ b/covid19int.html
@@ -217,6 +217,7 @@
 <script src=IntData_184.js></script>
 <script src=IntData_185.js></script>
 <script src=IntData_186.js></script>
+<script src=IntData_187.js></script>
 
 <script>
 
