Updated date to 09/26/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -218,6 +218,7 @@
 <script src=IntData_185.js></script>
 <script src=IntData_186.js></script>
 <script src=IntData_187.js></script>
+<script src=IntData_188.js></script>
 
 <script>
 
