--- a/covid19reg.html
+++ b/covid19reg.html
@@ -218,6 +218,7 @@
 <script src=RegData_185.js></script>
 <script src=RegData_186.js></script>
 <script src=RegData_187.js></script>
+<script src=RegData_188.js></script>
 
 <script>
 
