--- a/covid19state.html
+++ b/covid19state.html
@@ -161,6 +161,7 @@
 <script src=USAData_185.js></script>
 <script src=USAData_186.js></script>
 <script src=USAData_187.js></script>
+<script src=USAData_188.js></script>
 
 <script>
 
