--- a/covid19usa.html
+++ b/covid19usa.html
@@ -186,6 +186,7 @@
 <script src=USAData_185.js></script>
 <script src=USAData_186.js></script>
 <script src=USAData_187.js></script>
+<script src=USAData_188.js></script>
 
 <script>
 
