Updated date to 09/27/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -219,6 +219,7 @@
 <script src=RegData_186.js></script>
 <script src=RegData_187.js></script>
 <script src=RegData_188.js></script>
+<script src=RegData_189.js></script>
 
 <script>
 
