--- a/covid19int.html
+++ b/covid19int.html
@@ -219,6 +219,7 @@
 <script src=IntData_186.js></script>
 <script src=IntData_187.js></script>
 <script src=IntData_188.js></script>
+<script src=IntData_189.js></script>
 
 <script>
 
