--- a/covid19usa.html
+++ b/covid19usa.html
@@ -187,6 +187,7 @@
 <script src=USAData_186.js></script>
 <script src=USAData_187.js></script>
 <script src=USAData_188.js></script>
+<script src=USAData_189.js></script>
 
 <script>
 
