Updated data to 09/28/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -220,6 +220,7 @@
 <script src=IntData_187.js></script>
 <script src=IntData_188.js></script>
 <script src=IntData_189.js></script>
+<script src=IntData_190.js></script>
 
 <script>
 
