--- a/covid19reg.html
+++ b/covid19reg.html
@@ -220,6 +220,7 @@
 <script src=RegData_187.js></script>
 <script src=RegData_188.js></script>
 <script src=RegData_189.js></script>
+<script src=RegData_190.js></script>
 
 <script>
 
