--- a/covid19usa.html
+++ b/covid19usa.html
@@ -188,6 +188,7 @@
 <script src=USAData_187.js></script>
 <script src=USAData_188.js></script>
 <script src=USAData_189.js></script>
+<script src=USAData_190.js></script>
 
 <script>
 
