Updated date to 09/30/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -190,6 +190,7 @@
 <script src=USAData_189.js></script>
 <script src=USAData_190.js></script>
 <script src=USAData_191.js></script>
+<script src=USAData_192.js></script>
 
 <script>
 
