--- a/covid19int.html
+++ b/covid19int.html
@@ -222,6 +222,7 @@
 <script src=IntData_189.js></script>
 <script src=IntData_190.js></script>
 <script src=IntData_191.js></script>
+<script src=IntData_192.js></script>
 
 <script>
 
