--- a/covid19reg.html
+++ b/covid19reg.html
@@ -222,6 +222,7 @@
 <script src=RegData_189.js></script>
 <script src=RegData_190.js></script>
 <script src=RegData_191.js></script>
+<script src=RegData_192.js></script>
 
 <script>
 
