Updated data to 10/01/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -223,6 +223,7 @@
 <script src=IntData_190.js></script>
 <script src=IntData_191.js></script>
 <script src=IntData_192.js></script>
+<script src=IntData_193.js></script>
 
 <script>
 
