--- a/covid19reg.html
+++ b/covid19reg.html
@@ -223,6 +223,7 @@
 <script src=RegData_190.js></script>
 <script src=RegData_191.js></script>
 <script src=RegData_192.js></script>
+<script src=RegData_193.js></script>
 
 <script>
 
