--- a/covid19state.html
+++ b/covid19state.html
@@ -166,6 +166,7 @@
 <script src=USAData_190.js></script>
 <script src=USAData_191.js></script>
 <script src=USAData_192.js></script>
+<script src=USAData_193.js></script>
 
 <script>
 
