--- a/covid19usa.html
+++ b/covid19usa.html
@@ -191,6 +191,7 @@
 <script src=USAData_190.js></script>
 <script src=USAData_191.js></script>
 <script src=USAData_192.js></script>
+<script src=USAData_193.js></script>
 
 <script>
 
