--- a/covid19int.html
+++ b/covid19int.html
@@ -224,6 +224,7 @@
 <script src=IntData_191.js></script>
 <script src=IntData_192.js></script>
 <script src=IntData_193.js></script>
+<script src=IntData_194.js></script>
 
 <script>
 
