--- a/covid19reg.html
+++ b/covid19reg.html
@@ -224,6 +224,7 @@
 <script src=RegData_191.js></script>
 <script src=RegData_192.js></script>
 <script src=RegData_193.js></script>
+<script src=RegData_194.js></script>
 
 <script>
 
