--- a/covid19state.html
+++ b/covid19state.html
@@ -167,6 +167,7 @@
 <script src=USAData_191.js></script>
 <script src=USAData_192.js></script>
 <script src=USAData_193.js></script>
+<script src=USAData_194.js></script>
 
 <script>
 
