Updated data to 10/03/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -225,6 +225,7 @@
 <script src=IntData_192.js></script>
 <script src=IntData_193.js></script>
 <script src=IntData_194.js></script>
+<script src=IntData_195.js></script>
 
 <script>
 
