--- a/covid19state.html
+++ b/covid19state.html
@@ -168,6 +168,7 @@
 <script src=USAData_192.js></script>
 <script src=USAData_193.js></script>
 <script src=USAData_194.js></script>
+<script src=USAData_195.js></script>
 
 <script>
 
