--- a/covid19reg.html
+++ b/covid19reg.html
@@ -225,6 +225,7 @@
 <script src=RegData_192.js></script>
 <script src=RegData_193.js></script>
 <script src=RegData_194.js></script>
+<script src=RegData_195.js></script>
 
 <script>
 
