--- a/covid19usa.html
+++ b/covid19usa.html
@@ -193,6 +193,7 @@
 <script src=USAData_192.js></script>
 <script src=USAData_193.js></script>
 <script src=USAData_194.js></script>
+<script src=USAData_195.js></script>
 
 <script>
 
