Update date to 10/04/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -194,6 +194,7 @@
 <script src=USAData_193.js></script>
 <script src=USAData_194.js></script>
 <script src=USAData_195.js></script>
+<script src=USAData_196.js></script>
 
 <script>
 
