--- a/covid19int.html
+++ b/covid19int.html
@@ -226,6 +226,7 @@
 <script src=IntData_193.js></script>
 <script src=IntData_194.js></script>
 <script src=IntData_195.js></script>
+<script src=IntData_196.js></script>
 
 <script>
 
