--- a/covid19reg.html
+++ b/covid19reg.html
@@ -226,6 +226,7 @@
 <script src=RegData_193.js></script>
 <script src=RegData_194.js></script>
 <script src=RegData_195.js></script>
+<script src=RegData_196.js></script>
 
 <script>
 
