--- a/covid19state.html
+++ b/covid19state.html
@@ -169,6 +169,7 @@
 <script src=USAData_193.js></script>
 <script src=USAData_194.js></script>
 <script src=USAData_195.js></script>
+<script src=USAData_196.js></script>
 
 <script>
 
