Updated data to 10/05/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -227,6 +227,7 @@
 <script src=RegData_194.js></script>
 <script src=RegData_195.js></script>
 <script src=RegData_196.js></script>
+<script src=RegData_197.js></script>
 
 <script>
 
