--- a/covid19int.html
+++ b/covid19int.html
@@ -227,6 +227,7 @@
 <script src=IntData_194.js></script>
 <script src=IntData_195.js></script>
 <script src=IntData_196.js></script>
+<script src=IntData_197.js></script>
 
 <script>
 
