--- a/covid19usa.html
+++ b/covid19usa.html
@@ -195,6 +195,7 @@
 <script src=USAData_194.js></script>
 <script src=USAData_195.js></script>
 <script src=USAData_196.js></script>
+<script src=USAData_197.js></script>
 
 <script>
 
