Updated date to 10/06/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -171,6 +171,7 @@
 <script src=USAData_195.js></script>
 <script src=USAData_196.js></script>
 <script src=USAData_197.js></script>
+<script src=USAData_198.js></script>
 
 <script>
 
