--- a/covid19int.html
+++ b/covid19int.html
@@ -228,6 +228,7 @@
 <script src=IntData_195.js></script>
 <script src=IntData_196.js></script>
 <script src=IntData_197.js></script>
+<script src=IntData_198.js></script>
 
 <script>
 
