--- a/covid19reg.html
+++ b/covid19reg.html
@@ -228,6 +228,7 @@
 <script src=RegData_195.js></script>
 <script src=RegData_196.js></script>
 <script src=RegData_197.js></script>
+<script src=RegData_198.js></script>
 
 <script>
 
