Updated date to 10/07/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -229,6 +229,7 @@
 <script src=IntData_196.js></script>
 <script src=IntData_197.js></script>
 <script src=IntData_198.js></script>
+<script src=IntData_199.js></script>
 
 <script>
 
