--- a/covid19usa.html
+++ b/covid19usa.html
@@ -197,6 +197,7 @@
 <script src=USAData_196.js></script>
 <script src=USAData_197.js></script>
 <script src=USAData_198.js></script>
+<script src=USAData_199.js></script>
 
 <script>
 
