--- a/covid19reg.html
+++ b/covid19reg.html
@@ -229,6 +229,7 @@
 <script src=RegData_196.js></script>
 <script src=RegData_197.js></script>
 <script src=RegData_198.js></script>
+<script src=RegData_199.js></script>
 
 <script>
 
