--- a/covid19state.html
+++ b/covid19state.html
@@ -172,6 +172,7 @@
 <script src=USAData_196.js></script>
 <script src=USAData_197.js></script>
 <script src=USAData_198.js></script>
+<script src=USAData_199.js></script>
 
 <script>
 
