--- a/covid19reg.html
+++ b/covid19reg.html
@@ -230,6 +230,7 @@
 <script src=RegData_197.js></script>
 <script src=RegData_198.js></script>
 <script src=RegData_199.js></script>
+<script src=RegData_200.js></script>
 
 <script>
 
