--- a/covid19int.html
+++ b/covid19int.html
@@ -230,6 +230,7 @@
 <script src=IntData_197.js></script>
 <script src=IntData_198.js></script>
 <script src=IntData_199.js></script>
+<script src=IntData_200.js></script>
 
 <script>
 
