--- a/covid19state.html
+++ b/covid19state.html
@@ -173,6 +173,7 @@
 <script src=USAData_197.js></script>
 <script src=USAData_198.js></script>
 <script src=USAData_199.js></script>
+<script src=USAData_200.js></script>
 
 <script>
 
