--- a/covid19usa.html
+++ b/covid19usa.html
@@ -198,6 +198,7 @@
 <script src=USAData_197.js></script>
 <script src=USAData_198.js></script>
 <script src=USAData_199.js></script>
+<script src=USAData_200.js></script>
 
 <script>
 
