Updated date to 10/09/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -231,6 +231,7 @@
 <script src=IntData_198.js></script>
 <script src=IntData_199.js></script>
 <script src=IntData_200.js></script>
+<script src=IntData_201.js></script>
 
 <script>
 
