--- a/covid19reg.html
+++ b/covid19reg.html
@@ -231,6 +231,7 @@
 <script src=RegData_198.js></script>
 <script src=RegData_199.js></script>
 <script src=RegData_200.js></script>
+<script src=RegData_201.js></script>
 
 <script>
 
