--- a/covid19usa.html
+++ b/covid19usa.html
@@ -199,6 +199,7 @@
 <script src=USAData_198.js></script>
 <script src=USAData_199.js></script>
 <script src=USAData_200.js></script>
+<script src=USAData_201.js></script>
 
 <script>
 
