Updated data to 10/10/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -232,6 +232,7 @@
 <script src=IntData_199.js></script>
 <script src=IntData_200.js></script>
 <script src=IntData_201.js></script>
+<script src=IntData_202.js></script>
 
 <script>
 
