--- a/covid19reg.html
+++ b/covid19reg.html
@@ -232,6 +232,7 @@
 <script src=RegData_199.js></script>
 <script src=RegData_200.js></script>
 <script src=RegData_201.js></script>
+<script src=RegData_202.js></script>
 
 <script>
 
