--- a/covid19usa.html
+++ b/covid19usa.html
@@ -200,6 +200,7 @@
 <script src=USAData_199.js></script>
 <script src=USAData_200.js></script>
 <script src=USAData_201.js></script>
+<script src=USAData_202.js></script>
 
 <script>
 
