Updated data to 10/11/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -233,6 +233,7 @@
 <script src=RegData_200.js></script>
 <script src=RegData_201.js></script>
 <script src=RegData_202.js></script>
+<script src=RegData_203.js></script>
 
 <script>
 
