--- a/covid19usa.html
+++ b/covid19usa.html
@@ -201,6 +201,7 @@
 <script src=USAData_200.js></script>
 <script src=USAData_201.js></script>
 <script src=USAData_202.js></script>
+<script src=USAData_203.js></script>
 
 <script>
 
