--- a/covid19int.html
+++ b/covid19int.html
@@ -233,6 +233,7 @@
 <script src=IntData_200.js></script>
 <script src=IntData_201.js></script>
 <script src=IntData_202.js></script>
+<script src=IntData_203.js></script>
 
 <script>
 
