Updated data to 10/12/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -202,6 +202,7 @@
 <script src=USAData_201.js></script>
 <script src=USAData_202.js></script>
 <script src=USAData_203.js></script>
+<script src=USAData_204.js></script>
 
 <script>
 
