--- a/covid19reg.html
+++ b/covid19reg.html
@@ -234,6 +234,7 @@
 <script src=RegData_201.js></script>
 <script src=RegData_202.js></script>
 <script src=RegData_203.js></script>
+<script src=RegData_204.js></script>
 
 <script>
 
