--- a/covid19state.html
+++ b/covid19state.html
@@ -177,6 +177,7 @@
 <script src=USAData_201.js></script>
 <script src=USAData_202.js></script>
 <script src=USAData_203.js></script>
+<script src=USAData_204.js></script>
 
 <script>
 
