Updated date to 10/13/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -235,6 +235,7 @@
 <script src=IntData_202.js></script>
 <script src=IntData_203.js></script>
 <script src=IntData_204.js></script>
+<script src=IntData_205.js></script>
 
 <script>
 
