--- a/covid19reg.html
+++ b/covid19reg.html
@@ -235,6 +235,7 @@
 <script src=RegData_202.js></script>
 <script src=RegData_203.js></script>
 <script src=RegData_204.js></script>
+<script src=RegData_205.js></script>
 
 <script>
 
