--- a/covid19state.html
+++ b/covid19state.html
@@ -178,6 +178,7 @@
 <script src=USAData_202.js></script>
 <script src=USAData_203.js></script>
 <script src=USAData_204.js></script>
+<script src=USAData_205.js></script>
 
 <script>
 
