Updated data to 10/14/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -179,6 +179,7 @@
 <script src=USAData_203.js></script>
 <script src=USAData_204.js></script>
 <script src=USAData_205.js></script>
+<script src=USAData_206.js></script>
 
 <script>
 
