--- a/covid19reg.html
+++ b/covid19reg.html
@@ -236,6 +236,7 @@
 <script src=RegData_203.js></script>
 <script src=RegData_204.js></script>
 <script src=RegData_205.js></script>
+<script src=RegData_206.js></script>
 
 <script>
 
