Updated data to 10/15/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -237,6 +237,7 @@
 <script src=RegData_204.js></script>
 <script src=RegData_205.js></script>
 <script src=RegData_206.js></script>
+<script src=RegData_207.js></script>
 
 <script>
 
