--- a/covid19int.html
+++ b/covid19int.html
@@ -237,6 +237,7 @@
 <script src=IntData_204.js></script>
 <script src=IntData_205.js></script>
 <script src=IntData_206.js></script>
+<script src=IntData_207.js></script>
 
 <script>
 
