--- a/covid19state.html
+++ b/covid19state.html
@@ -180,6 +180,7 @@
 <script src=USAData_204.js></script>
 <script src=USAData_205.js></script>
 <script src=USAData_206.js></script>
+<script src=USAData_207.js></script>
 
 <script>
 
