Updated data to 10/16/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -238,6 +238,7 @@
 <script src=IntData_205.js></script>
 <script src=IntData_206.js></script>
 <script src=IntData_207.js></script>
+<script src=IntData_208.js></script>
 
 <script>
 
