--- a/covid19reg.html
+++ b/covid19reg.html
@@ -238,6 +238,7 @@
 <script src=RegData_205.js></script>
 <script src=RegData_206.js></script>
 <script src=RegData_207.js></script>
+<script src=RegData_208.js></script>
 
 <script>
 
