--- a/covid19usa.html
+++ b/covid19usa.html
@@ -206,6 +206,7 @@
 <script src=USAData_205.js></script>
 <script src=USAData_206.js></script>
 <script src=USAData_207.js></script>
+<script src=USAData_208.js></script>
 
 <script>
 
