Updated data to 10/17/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -239,6 +239,7 @@
 <script src=RegData_206.js></script>
 <script src=RegData_207.js></script>
 <script src=RegData_208.js></script>
+<script src=RegData_209.js></script>
 
 <script>
 
