--- a/covid19state.html
+++ b/covid19state.html
@@ -182,6 +182,7 @@
 <script src=USAData_206.js></script>
 <script src=USAData_207.js></script>
 <script src=USAData_208.js></script>
+<script src=USAData_209.js></script>
 
 <script>
 
