--- a/covid19int.html
+++ b/covid19int.html
@@ -239,6 +239,7 @@
 <script src=IntData_206.js></script>
 <script src=IntData_207.js></script>
 <script src=IntData_208.js></script>
+<script src=IntData_209.js></script>
 
 <script>
 
