--- a/covid19usa.html
+++ b/covid19usa.html
@@ -207,6 +207,7 @@
 <script src=USAData_206.js></script>
 <script src=USAData_207.js></script>
 <script src=USAData_208.js></script>
+<script src=USAData_209.js></script>
 
 <script>
 
