Updated data to 10/18/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -240,6 +240,7 @@
 <script src=IntData_207.js></script>
 <script src=IntData_208.js></script>
 <script src=IntData_209.js></script>
+<script src=IntData_210.js></script>
 
 <script>
 
