--- a/covid19reg.html
+++ b/covid19reg.html
@@ -240,6 +240,7 @@
 <script src=RegData_207.js></script>
 <script src=RegData_208.js></script>
 <script src=RegData_209.js></script>
+<script src=RegData_210.js></script>
 
 <script>
 
