--- a/covid19state.html
+++ b/covid19state.html
@@ -183,6 +183,7 @@
 <script src=USAData_207.js></script>
 <script src=USAData_208.js></script>
 <script src=USAData_209.js></script>
+<script src=USAData_210.js></script>
 
 <script>
 
