Updated data to 10/19/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -184,6 +184,7 @@
 <script src=USAData_208.js></script>
 <script src=USAData_209.js></script>
 <script src=USAData_210.js></script>
+<script src=USAData_211.js></script>
 
 <script>
 
