--- a/covid19int.html
+++ b/covid19int.html
@@ -241,6 +241,7 @@
 <script src=IntData_208.js></script>
 <script src=IntData_209.js></script>
 <script src=IntData_210.js></script>
+<script src=IntData_211.js></script>
 
 <script>
 
