--- a/covid19reg.html
+++ b/covid19reg.html
@@ -241,6 +241,7 @@
 <script src=RegData_208.js></script>
 <script src=RegData_209.js></script>
 <script src=RegData_210.js></script>
+<script src=RegData_211.js></script>
 
 <script>
 
