Updated data to 10/20/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -242,6 +242,7 @@
 <script src=IntData_209.js></script>
 <script src=IntData_210.js></script>
 <script src=IntData_211.js></script>
+<script src=IntData_212.js></script>
 
 <script>
 
