--- a/covid19reg.html
+++ b/covid19reg.html
@@ -242,6 +242,7 @@
 <script src=RegData_209.js></script>
 <script src=RegData_210.js></script>
 <script src=RegData_211.js></script>
+<script src=RegData_212.js></script>
 
 <script>
 
