--- a/covid19state.html
+++ b/covid19state.html
@@ -185,6 +185,7 @@
 <script src=USAData_209.js></script>
 <script src=USAData_210.js></script>
 <script src=USAData_211.js></script>
+<script src=USAData_212.js></script>
 
 <script>
 
