--- a/covid19usa.html
+++ b/covid19usa.html
@@ -210,6 +210,7 @@
 <script src=USAData_209.js></script>
 <script src=USAData_210.js></script>
 <script src=USAData_211.js></script>
+<script src=USAData_212.js></script>
 
 <script>
 
