Updated data to 10/21/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -243,6 +243,7 @@
 <script src=IntData_210.js></script>
 <script src=IntData_211.js></script>
 <script src=IntData_212.js></script>
+<script src=IntData_213.js></script>
 
 <script>
 
