--- a/covid19reg.html
+++ b/covid19reg.html
@@ -243,6 +243,7 @@
 <script src=RegData_210.js></script>
 <script src=RegData_211.js></script>
 <script src=RegData_212.js></script>
+<script src=RegData_213.js></script>
 
 <script>
 
