--- a/covid19state.html
+++ b/covid19state.html
@@ -186,6 +186,7 @@
 <script src=USAData_210.js></script>
 <script src=USAData_211.js></script>
 <script src=USAData_212.js></script>
+<script src=USAData_213.js></script>
 
 <script>
 
