Updated data to 10/22/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -244,6 +244,7 @@
 <script src=RegData_211.js></script>
 <script src=RegData_212.js></script>
 <script src=RegData_213.js></script>
+<script src=RegData_214.js></script>
 
 <script>
 
