--- a/covid19usa.html
+++ b/covid19usa.html
@@ -212,6 +212,7 @@
 <script src=USAData_211.js></script>
 <script src=USAData_212.js></script>
 <script src=USAData_213.js></script>
+<script src=USAData_214.js></script>
 
 <script>
 
