--- a/covid19int.html
+++ b/covid19int.html
@@ -244,6 +244,7 @@
 <script src=IntData_211.js></script>
 <script src=IntData_212.js></script>
 <script src=IntData_213.js></script>
+<script src=IntData_214.js></script>
 
 <script>
 
