--- a/covid19int.html
+++ b/covid19int.html
@@ -245,6 +245,7 @@
 <script src=IntData_212.js></script>
 <script src=IntData_213.js></script>
 <script src=IntData_214.js></script>
+<script src=IntData_215.js></script>
 
 <script>
 
