--- a/covid19reg.html
+++ b/covid19reg.html
@@ -245,6 +245,7 @@
 <script src=RegData_212.js></script>
 <script src=RegData_213.js></script>
 <script src=RegData_214.js></script>
+<script src=RegData_215.js></script>
 
 <script>
 
