--- a/covid19usa.html
+++ b/covid19usa.html
@@ -213,6 +213,7 @@
 <script src=USAData_212.js></script>
 <script src=USAData_213.js></script>
 <script src=USAData_214.js></script>
+<script src=USAData_215.js></script>
 
 <script>
 
