Updated data to 10/24/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -246,6 +246,7 @@
 <script src=IntData_213.js></script>
 <script src=IntData_214.js></script>
 <script src=IntData_215.js></script>
+<script src=IntData_216.js></script>
 
 <script>
 
