--- a/covid19reg.html
+++ b/covid19reg.html
@@ -246,6 +246,7 @@
 <script src=RegData_213.js></script>
 <script src=RegData_214.js></script>
 <script src=RegData_215.js></script>
+<script src=RegData_216.js></script>
 
 <script>
 
