--- a/covid19usa.html
+++ b/covid19usa.html
@@ -214,6 +214,7 @@
 <script src=USAData_213.js></script>
 <script src=USAData_214.js></script>
 <script src=USAData_215.js></script>
+<script src=USAData_216.js></script>
 
 <script>
 
