Updated data to 10/26/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -247,6 +247,7 @@
 <script src=RegData_214.js></script>
 <script src=RegData_215.js></script>
 <script src=RegData_216.js></script>
+<script src=RegData_217.js></script>
 
 <script>
 
