--- a/covid19usa.html
+++ b/covid19usa.html
@@ -215,6 +215,7 @@
 <script src=USAData_214.js></script>
 <script src=USAData_215.js></script>
 <script src=USAData_216.js></script>
+<script src=USAData_217.js></script>
 
 <script>
 
