--- a/covid19int.html
+++ b/covid19int.html
@@ -247,6 +247,7 @@
 <script src=IntData_214.js></script>
 <script src=IntData_215.js></script>
 <script src=IntData_216.js></script>
+<script src=IntData_217.js></script>
 
 <script>
 
