--- a/covid19int.html
+++ b/covid19int.html
@@ -248,6 +248,7 @@
 <script src=IntData_215.js></script>
 <script src=IntData_216.js></script>
 <script src=IntData_217.js></script>
+<script src=IntData_218.js></script>
 
 <script>
 
