--- a/covid19reg.html
+++ b/covid19reg.html
@@ -248,6 +248,7 @@
 <script src=RegData_215.js></script>
 <script src=RegData_216.js></script>
 <script src=RegData_217.js></script>
+<script src=RegData_218.js></script>
 
 <script>
 
