--- a/covid19state.html
+++ b/covid19state.html
@@ -191,6 +191,7 @@
 <script src=USAData_215.js></script>
 <script src=USAData_216.js></script>
 <script src=USAData_217.js></script>
+<script src=USAData_218.js></script>
 
 <script>
 
