--- a/covid19usa.html
+++ b/covid19usa.html
@@ -216,6 +216,7 @@
 <script src=USAData_215.js></script>
 <script src=USAData_216.js></script>
 <script src=USAData_217.js></script>
+<script src=USAData_218.js></script>
 
 <script>
 
