Updated data to 10/28/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -192,6 +192,7 @@
 <script src=USAData_216.js></script>
 <script src=USAData_217.js></script>
 <script src=USAData_218.js></script>
+<script src=USAData_219.js></script>
 
 <script>
 
