--- a/covid19int.html
+++ b/covid19int.html
@@ -249,6 +249,7 @@
 <script src=IntData_216.js></script>
 <script src=IntData_217.js></script>
 <script src=IntData_218.js></script>
+<script src=IntData_219.js></script>
 
 <script>
 
