--- a/covid19reg.html
+++ b/covid19reg.html
@@ -249,6 +249,7 @@
 <script src=RegData_216.js></script>
 <script src=RegData_217.js></script>
 <script src=RegData_218.js></script>
+<script src=RegData_219.js></script>
 
 <script>
 
