Updated data to 10/29/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -250,6 +250,7 @@
 <script src=RegData_217.js></script>
 <script src=RegData_218.js></script>
 <script src=RegData_219.js></script>
+<script src=RegData_220.js></script>
 
 <script>
 
