--- a/covid19state.html
+++ b/covid19state.html
@@ -193,6 +193,7 @@
 <script src=USAData_217.js></script>
 <script src=USAData_218.js></script>
 <script src=USAData_219.js></script>
+<script src=USAData_220.js></script>
 
 <script>
 
