--- a/covid19int.html
+++ b/covid19int.html
@@ -250,6 +250,7 @@
 <script src=IntData_217.js></script>
 <script src=IntData_218.js></script>
 <script src=IntData_219.js></script>
+<script src=IntData_220.js></script>
 
 <script>
 
