--- a/covid19usa.html
+++ b/covid19usa.html
@@ -218,6 +218,7 @@
 <script src=USAData_217.js></script>
 <script src=USAData_218.js></script>
 <script src=USAData_219.js></script>
+<script src=USAData_220.js></script>
 
 <script>
 
