Updated data to 10/30/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -251,6 +251,7 @@
 <script src=RegData_218.js></script>
 <script src=RegData_219.js></script>
 <script src=RegData_220.js></script>
+<script src=RegData_221.js></script>
 
 <script>
 
