--- a/covid19state.html
+++ b/covid19state.html
@@ -194,6 +194,7 @@
 <script src=USAData_218.js></script>
 <script src=USAData_219.js></script>
 <script src=USAData_220.js></script>
+<script src=USAData_221.js></script>
 
 <script>
 
