--- a/covid19usa.html
+++ b/covid19usa.html
@@ -220,6 +220,7 @@
 <script src=USAData_219.js></script>
 <script src=USAData_220.js></script>
 <script src=USAData_221.js></script>
+<script src=USAData_222.js></script>
 
 <script>
 
@@ -1367,7 +1368,7 @@ function XYChart(TopLeft, SizeXY, XEmphasis, XYLabels, ValueSeries1, ValueSeries
 		ctx.lineTo(TopLeft[0]+(XScale*x),TopLeft[1]+SizeXY[1]);
 		ctx.stroke();
 		ctx.lineWidth = 1;
-		if((x % 20) == 0)
+		if((x % 30) == 0)
 		{
 			ctx.globalAlpha = 1.0;
 			// ctx.strokeStyle = "black";
