Updated data to 11/01/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -253,6 +253,7 @@
 <script src=IntData_220.js></script>
 <script src=IntData_221.js></script>
 <script src=IntData_222.js></script>
+<script src=IntData_223.js></script>
 
 <script>
 
