--- a/covid19reg.html
+++ b/covid19reg.html
@@ -253,6 +253,7 @@
 <script src=RegData_220.js></script>
 <script src=RegData_221.js></script>
 <script src=RegData_222.js></script>
+<script src=RegData_223.js></script>
 
 <script>
 
