--- a/covid19state.html
+++ b/covid19state.html
@@ -196,6 +196,7 @@
 <script src=USAData_220.js></script>
 <script src=USAData_221.js></script>
 <script src=USAData_222.js></script>
+<script src=USAData_223.js></script>
 
 <script>
 
