Updated data to 11/02/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -254,6 +254,7 @@
 <script src=RegData_221.js></script>
 <script src=RegData_222.js></script>
 <script src=RegData_223.js></script>
+<script src=RegData_224.js></script>
 
 <script>
 
