--- a/covid19int.html
+++ b/covid19int.html
@@ -254,6 +254,7 @@
 <script src=IntData_221.js></script>
 <script src=IntData_222.js></script>
 <script src=IntData_223.js></script>
+<script src=IntData_224.js></script>
 
 <script>
 
