--- a/covid19state.html
+++ b/covid19state.html
@@ -197,6 +197,7 @@
 <script src=USAData_221.js></script>
 <script src=USAData_222.js></script>
 <script src=USAData_223.js></script>
+<script src=USAData_224.js></script>
 
 <script>
 
