--- a/covid19reg.html
+++ b/covid19reg.html
@@ -255,6 +255,7 @@
 <script src=RegData_222.js></script>
 <script src=RegData_223.js></script>
 <script src=RegData_224.js></script>
+<script src=RegData_225.js></script>
 
 <script>
 
