--- a/covid19usa.html
+++ b/covid19usa.html
@@ -223,6 +223,7 @@
 <script src=USAData_222.js></script>
 <script src=USAData_223.js></script>
 <script src=USAData_224.js></script>
+<script src=USAData_225.js></script>
 
 <script>
 
