--- a/covid19reg.html
+++ b/covid19reg.html
@@ -256,6 +256,7 @@
 <script src=RegData_223.js></script>
 <script src=RegData_224.js></script>
 <script src=RegData_225.js></script>
+<script src=RegData_226.js></script>
 
 <script>
 
