--- a/covid19int.html
+++ b/covid19int.html
@@ -256,6 +256,7 @@
 <script src=IntData_223.js></script>
 <script src=IntData_224.js></script>
 <script src=IntData_225.js></script>
+<script src=IntData_226.js></script>
 
 <script>
 
