--- a/covid19state.html
+++ b/covid19state.html
@@ -199,6 +199,7 @@
 <script src=USAData_223.js></script>
 <script src=USAData_224.js></script>
 <script src=USAData_225.js></script>
+<script src=USAData_226.js></script>
 
 <script>
 
