Updated data to 11/05/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -200,6 +200,7 @@
 <script src=USAData_224.js></script>
 <script src=USAData_225.js></script>
 <script src=USAData_226.js></script>
+<script src=USAData_227.js></script>
 
 <script>
 
