--- a/covid19int.html
+++ b/covid19int.html
@@ -257,6 +257,7 @@
 <script src=IntData_224.js></script>
 <script src=IntData_225.js></script>
 <script src=IntData_226.js></script>
+<script src=IntData_227.js></script>
 
 <script>
 
