--- a/covid19int.html
+++ b/covid19int.html
@@ -258,6 +258,7 @@
 <script src=IntData_225.js></script>
 <script src=IntData_226.js></script>
 <script src=IntData_227.js></script>
+<script src=IntData_228.js></script>
 
 <script>
 
