Updated data to 11/07/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -259,6 +259,7 @@
 <script src=IntData_226.js></script>
 <script src=IntData_227.js></script>
 <script src=IntData_228.js></script>
+<script src=IntData_229.js></script>
 
 <script>
 
