--- a/covid19reg.html
+++ b/covid19reg.html
@@ -259,6 +259,7 @@
 <script src=RegData_226.js></script>
 <script src=RegData_227.js></script>
 <script src=RegData_228.js></script>
+<script src=RegData_229.js></script>
 
 <script>
 
