--- a/covid19usa.html
+++ b/covid19usa.html
@@ -227,6 +227,7 @@
 <script src=USAData_226.js></script>
 <script src=USAData_227.js></script>
 <script src=USAData_228.js></script>
+<script src=USAData_229.js></script>
 
 <script>
 
