Updated data to 11/08/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -260,6 +260,7 @@
 <script src=IntData_227.js></script>
 <script src=IntData_228.js></script>
 <script src=IntData_229.js></script>
+<script src=IntData_230.js></script>
 
 <script>
 
