--- a/covid19reg.html
+++ b/covid19reg.html
@@ -260,6 +260,7 @@
 <script src=RegData_227.js></script>
 <script src=RegData_228.js></script>
 <script src=RegData_229.js></script>
+<script src=RegData_230.js></script>
 
 <script>
 
