--- a/covid19state.html
+++ b/covid19state.html
@@ -203,6 +203,7 @@
 <script src=USAData_227.js></script>
 <script src=USAData_228.js></script>
 <script src=USAData_229.js></script>
+<script src=USAData_230.js></script>
 
 <script>
 
