--- a/covid19usa.html
+++ b/covid19usa.html
@@ -228,6 +228,7 @@
 <script src=USAData_227.js></script>
 <script src=USAData_228.js></script>
 <script src=USAData_229.js></script>
+<script src=USAData_230.js></script>
 
 <script>
 
