Updated data to 11/09/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -229,6 +229,7 @@
 <script src=USAData_228.js></script>
 <script src=USAData_229.js></script>
 <script src=USAData_230.js></script>
+<script src=USAData_231.js></script>
 
 <script>
 
