--- a/covid19int.html
+++ b/covid19int.html
@@ -261,6 +261,7 @@
 <script src=IntData_228.js></script>
 <script src=IntData_229.js></script>
 <script src=IntData_230.js></script>
+<script src=IntData_231.js></script>
 
 <script>
 
