--- a/covid19reg.html
+++ b/covid19reg.html
@@ -261,6 +261,7 @@
 <script src=RegData_228.js></script>
 <script src=RegData_229.js></script>
 <script src=RegData_230.js></script>
+<script src=RegData_231.js></script>
 
 <script>
 
