--- a/covid19int.html
+++ b/covid19int.html
@@ -262,6 +262,7 @@
 <script src=IntData_229.js></script>
 <script src=IntData_230.js></script>
 <script src=IntData_231.js></script>
+<script src=IntData_232.js></script>
 
 <script>
 
