--- a/covid19reg.html
+++ b/covid19reg.html
@@ -262,6 +262,7 @@
 <script src=RegData_229.js></script>
 <script src=RegData_230.js></script>
 <script src=RegData_231.js></script>
+<script src=RegData_232.js></script>
 
 <script>
 
