Updated data to 11/11/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -263,6 +263,7 @@
 <script src=IntData_230.js></script>
 <script src=IntData_231.js></script>
 <script src=IntData_232.js></script>
+<script src=IntData_233.js></script>
 
 <script>
 
