--- a/covid19usa.html
+++ b/covid19usa.html
@@ -231,6 +231,7 @@
 <script src=USAData_230.js></script>
 <script src=USAData_231.js></script>
 <script src=USAData_232.js></script>
+<script src=USAData_233.js></script>
 
 <script>
 
