--- a/covid19reg.html
+++ b/covid19reg.html
@@ -263,6 +263,7 @@
 <script src=RegData_230.js></script>
 <script src=RegData_231.js></script>
 <script src=RegData_232.js></script>
+<script src=RegData_233.js></script>
 
 <script>
 
