--- a/covid19state.html
+++ b/covid19state.html
@@ -206,6 +206,7 @@
 <script src=USAData_230.js></script>
 <script src=USAData_231.js></script>
 <script src=USAData_232.js></script>
+<script src=USAData_233.js></script>
 
 <script>
 
