Updated data to 11/12/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -264,6 +264,7 @@
 <script src=IntData_231.js></script>
 <script src=IntData_232.js></script>
 <script src=IntData_233.js></script>
+<script src=IntData_234.js></script>
 
 <script>
 
