--- a/covid19reg.html
+++ b/covid19reg.html
@@ -264,6 +264,7 @@
 <script src=RegData_231.js></script>
 <script src=RegData_232.js></script>
 <script src=RegData_233.js></script>
+<script src=RegData_234.js></script>
 
 <script>
 
