--- a/covid19state.html
+++ b/covid19state.html
@@ -207,6 +207,7 @@
 <script src=USAData_231.js></script>
 <script src=USAData_232.js></script>
 <script src=USAData_233.js></script>
+<script src=USAData_234.js></script>
 
 <script>
 
