--- a/covid19usa.html
+++ b/covid19usa.html
@@ -232,6 +232,7 @@
 <script src=USAData_231.js></script>
 <script src=USAData_232.js></script>
 <script src=USAData_233.js></script>
+<script src=USAData_234.js></script>
 
 <script>
 
