Updated data to 11/13/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -265,6 +265,7 @@
 <script src=RegData_232.js></script>
 <script src=RegData_233.js></script>
 <script src=RegData_234.js></script>
+<script src=RegData_235.js></script>
 
 <script>
 
