--- a/covid19usa.html
+++ b/covid19usa.html
@@ -233,6 +233,7 @@
 <script src=USAData_232.js></script>
 <script src=USAData_233.js></script>
 <script src=USAData_234.js></script>
+<script src=USAData_235.js></script>
 
 <script>
 
