--- a/covid19int.html
+++ b/covid19int.html
@@ -265,6 +265,7 @@
 <script src=IntData_232.js></script>
 <script src=IntData_233.js></script>
 <script src=IntData_234.js></script>
+<script src=IntData_235.js></script>
 
 <script>
 
