Updated data to 11/14/2020 - widened state charts

--- a/covid19int.html
+++ b/covid19int.html
@@ -266,6 +266,7 @@
 <script src=IntData_233.js></script>
 <script src=IntData_234.js></script>
 <script src=IntData_235.js></script>
+<script src=IntData_236.js></script>
 
 <script>
 
