--- a/covid19reg.html
+++ b/covid19reg.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class = "Row">
 		<div class = "ChartCell">
-			<canvas id="ChartArea" width=1000 height=1000 style="border:0px solid #ffffff; background-color:white;">
+			<canvas id="ChartArea" width=1300 height=1000 style="border:0px solid #ffffff; background-color:white;">
 			Your browser does not support HTML5
 			</canvas>
 		</div>
@@ -266,6 +266,7 @@
 <script src=RegData_233.js></script>
 <script src=RegData_234.js></script>
 <script src=RegData_235.js></script>
+<script src=RegData_236.js></script>
 
 <script>
 
@@ -911,7 +912,7 @@ var RegionSelect = document.getElementById("RegionSelect");
 RegionSelect.style.display = "inline";
 RegionSelect.onchange = function()
 {
-	var ChartDim = [500,350];
+	var ChartDim = [800,350];
 	var ChartLoc = [340,50];
 	var x,y;
 
