--- a/covid19usa.html
+++ b/covid19usa.html
@@ -234,6 +234,7 @@
 <script src=USAData_233.js></script>
 <script src=USAData_234.js></script>
 <script src=USAData_235.js></script>
+<script src=USAData_236.js></script>
 
 <script>
 
