Updated data to 11/15/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -267,6 +267,7 @@
 <script src=RegData_234.js></script>
 <script src=RegData_235.js></script>
 <script src=RegData_236.js></script>
+<script src=RegData_237.js></script>
 
 <script>
 
