--- a/covid19int.html
+++ b/covid19int.html
@@ -21,7 +21,7 @@
 	</div>
 	<div class = "Row">
 		<div class = "ChartCell">
-			<canvas id="ChartArea" width=1000 height=900 style="border:0px solid #ffffff; background-color:white;">
+			<canvas id="ChartArea" width=1300 height=900 style="border:0px solid #ffffff; background-color:white;">
 			Your browser does not support HTML5
 			</canvas>
 		</div>
@@ -267,6 +267,7 @@
 <script src=IntData_234.js></script>
 <script src=IntData_235.js></script>
 <script src=IntData_236.js></script>
+<script src=IntData_237.js></script>
 
 <script>
 
@@ -780,7 +781,7 @@ function RefreshOptionFields()
 
 StateSelect.onchange = function()
 {
-	var ChartDim = [500,350];
+	var ChartDim = [800,350];
 	var ChartLoc = [340,50];
 
 	RefreshOptionFields();
