--- a/covid19state.html
+++ b/covid19state.html
@@ -210,6 +210,7 @@
 <script src=USAData_234.js></script>
 <script src=USAData_235.js></script>
 <script src=USAData_236.js></script>
+<script src=USAData_237.js></script>
 
 <script>
 
