Updated data to 11/16/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -268,6 +268,7 @@
 <script src=IntData_235.js></script>
 <script src=IntData_236.js></script>
 <script src=IntData_237.js></script>
+<script src=IntData_238.js></script>
 
 <script>
 
