--- a/covid19reg.html
+++ b/covid19reg.html
@@ -268,6 +268,7 @@
 <script src=RegData_235.js></script>
 <script src=RegData_236.js></script>
 <script src=RegData_237.js></script>
+<script src=RegData_238.js></script>
 
 <script>
 
