--- a/covid19state.html
+++ b/covid19state.html
@@ -211,6 +211,7 @@
 <script src=USAData_235.js></script>
 <script src=USAData_236.js></script>
 <script src=USAData_237.js></script>
+<script src=USAData_238.js></script>
 
 <script>
 
