--- a/covid19usa.html
+++ b/covid19usa.html
@@ -236,6 +236,7 @@
 <script src=USAData_235.js></script>
 <script src=USAData_236.js></script>
 <script src=USAData_237.js></script>
+<script src=USAData_238.js></script>
 
 <script>
 
