Updated date to 11/17/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -269,6 +269,7 @@
 <script src=IntData_236.js></script>
 <script src=IntData_237.js></script>
 <script src=IntData_238.js></script>
+<script src=IntData_239.js></script>
 
 <script>
 
