--- a/covid19reg.html
+++ b/covid19reg.html
@@ -269,6 +269,7 @@
 <script src=RegData_236.js></script>
 <script src=RegData_237.js></script>
 <script src=RegData_238.js></script>
+<script src=RegData_239.js></script>
 
 <script>
 
