--- a/covid19state.html
+++ b/covid19state.html
@@ -212,6 +212,7 @@
 <script src=USAData_236.js></script>
 <script src=USAData_237.js></script>
 <script src=USAData_238.js></script>
+<script src=USAData_239.js></script>
 
 <script>
 
