Updated data to 11/18/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -270,6 +270,7 @@
 <script src=IntData_237.js></script>
 <script src=IntData_238.js></script>
 <script src=IntData_239.js></script>
+<script src=IntData_240.js></script>
 
 <script>
 
