--- a/covid19reg.html
+++ b/covid19reg.html
@@ -270,6 +270,7 @@
 <script src=RegData_237.js></script>
 <script src=RegData_238.js></script>
 <script src=RegData_239.js></script>
+<script src=RegData_240.js></script>
 
 <script>
 
