--- a/covid19state.html
+++ b/covid19state.html
@@ -213,6 +213,7 @@
 <script src=USAData_237.js></script>
 <script src=USAData_238.js></script>
 <script src=USAData_239.js></script>
+<script src=USAData_240.js></script>
 
 <script>
 
