--- a/covid19usa.html
+++ b/covid19usa.html
@@ -238,6 +238,7 @@
 <script src=USAData_237.js></script>
 <script src=USAData_238.js></script>
 <script src=USAData_239.js></script>
+<script src=USAData_240.js></script>
 
 <script>
 
