--- a/covid19int.html
+++ b/covid19int.html
@@ -271,6 +271,7 @@
 <script src=IntData_238.js></script>
 <script src=IntData_239.js></script>
 <script src=IntData_240.js></script>
+<script src=IntData_241.js></script>
 
 <script>
 
