--- a/covid19reg.html
+++ b/covid19reg.html
@@ -271,6 +271,7 @@
 <script src=RegData_238.js></script>
 <script src=RegData_239.js></script>
 <script src=RegData_240.js></script>
+<script src=RegData_241.js></script>
 
 <script>
 
