--- a/covid19state.html
+++ b/covid19state.html
@@ -214,6 +214,7 @@
 <script src=USAData_238.js></script>
 <script src=USAData_239.js></script>
 <script src=USAData_240.js></script>
+<script src=USAData_241.js></script>
 
 <script>
 
