Updated data to 11/20/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -272,6 +272,7 @@
 <script src=IntData_239.js></script>
 <script src=IntData_240.js></script>
 <script src=IntData_241.js></script>
+<script src=IntData_242.js></script>
 
 <script>
 
