--- a/covid19state.html
+++ b/covid19state.html
@@ -215,6 +215,7 @@
 <script src=USAData_239.js></script>
 <script src=USAData_240.js></script>
 <script src=USAData_241.js></script>
+<script src=USAData_242.js></script>
 
 <script>
 
