--- a/covid19reg.html
+++ b/covid19reg.html
@@ -272,6 +272,7 @@
 <script src=RegData_239.js></script>
 <script src=RegData_240.js></script>
 <script src=RegData_241.js></script>
+<script src=RegData_242.js></script>
 
 <script>
 
