--- a/covid19int.html
+++ b/covid19int.html
@@ -273,6 +273,7 @@
 <script src=IntData_240.js></script>
 <script src=IntData_241.js></script>
 <script src=IntData_242.js></script>
+<script src=IntData_243.js></script>
 
 <script>
 
