--- a/covid19reg.html
+++ b/covid19reg.html
@@ -273,6 +273,7 @@
 <script src=RegData_240.js></script>
 <script src=RegData_241.js></script>
 <script src=RegData_242.js></script>
+<script src=RegData_243.js></script>
 
 <script>
 
