--- a/covid19state.html
+++ b/covid19state.html
@@ -216,6 +216,7 @@
 <script src=USAData_240.js></script>
 <script src=USAData_241.js></script>
 <script src=USAData_242.js></script>
+<script src=USAData_243.js></script>
 
 <script>
 
