--- a/covid19usa.html
+++ b/covid19usa.html
@@ -241,6 +241,7 @@
 <script src=USAData_240.js></script>
 <script src=USAData_241.js></script>
 <script src=USAData_242.js></script>
+<script src=USAData_243.js></script>
 
 <script>
 
