Updated data to 11/22/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -274,6 +274,7 @@
 <script src=RegData_241.js></script>
 <script src=RegData_242.js></script>
 <script src=RegData_243.js></script>
+<script src=RegData_244.js></script>
 
 <script>
 
