--- a/covid19state.html
+++ b/covid19state.html
@@ -217,6 +217,7 @@
 <script src=USAData_241.js></script>
 <script src=USAData_242.js></script>
 <script src=USAData_243.js></script>
+<script src=USAData_244.js></script>
 
 <script>
 
