--- a/covid19int.html
+++ b/covid19int.html
@@ -274,6 +274,7 @@
 <script src=IntData_241.js></script>
 <script src=IntData_242.js></script>
 <script src=IntData_243.js></script>
+<script src=IntData_244.js></script>
 
 <script>
 
