Updated data to 11/23/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -275,6 +275,7 @@
 <script src=IntData_242.js></script>
 <script src=IntData_243.js></script>
 <script src=IntData_244.js></script>
+<script src=IntData_245.js></script>
 
 <script>
 
