--- a/covid19reg.html
+++ b/covid19reg.html
@@ -275,6 +275,7 @@
 <script src=RegData_242.js></script>
 <script src=RegData_243.js></script>
 <script src=RegData_244.js></script>
+<script src=RegData_245.js></script>
 
 <script>
 
