--- a/covid19usa.html
+++ b/covid19usa.html
@@ -243,6 +243,7 @@
 <script src=USAData_242.js></script>
 <script src=USAData_243.js></script>
 <script src=USAData_244.js></script>
+<script src=USAData_245.js></script>
 
 <script>
 
