--- a/covid19state.html
+++ b/covid19state.html
@@ -218,6 +218,7 @@
 <script src=USAData_242.js></script>
 <script src=USAData_243.js></script>
 <script src=USAData_244.js></script>
+<script src=USAData_245.js></script>
 
 <script>
 
