Updated data to 11/24/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -219,6 +219,7 @@
 <script src=USAData_243.js></script>
 <script src=USAData_244.js></script>
 <script src=USAData_245.js></script>
+<script src=USAData_246.js></script>
 
 <script>
 
