--- a/covid19int.html
+++ b/covid19int.html
@@ -276,6 +276,7 @@
 <script src=IntData_243.js></script>
 <script src=IntData_244.js></script>
 <script src=IntData_245.js></script>
+<script src=IntData_246.js></script>
 
 <script>
 
