--- a/covid19reg.html
+++ b/covid19reg.html
@@ -276,6 +276,7 @@
 <script src=RegData_243.js></script>
 <script src=RegData_244.js></script>
 <script src=RegData_245.js></script>
+<script src=RegData_246.js></script>
 
 <script>
 
