Updated date to 11/25/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -277,6 +277,7 @@
 <script src=IntData_244.js></script>
 <script src=IntData_245.js></script>
 <script src=IntData_246.js></script>
+<script src=IntData_247.js></script>
 
 <script>
 
