--- a/covid19usa.html
+++ b/covid19usa.html
@@ -245,6 +245,7 @@
 <script src=USAData_244.js></script>
 <script src=USAData_245.js></script>
 <script src=USAData_246.js></script>
+<script src=USAData_247.js></script>
 
 <script>
 
