--- a/covid19reg.html
+++ b/covid19reg.html
@@ -277,6 +277,7 @@
 <script src=RegData_244.js></script>
 <script src=RegData_245.js></script>
 <script src=RegData_246.js></script>
+<script src=RegData_247.js></script>
 
 <script>
 
