--- a/covid19int.html
+++ b/covid19int.html
@@ -278,6 +278,7 @@
 <script src=IntData_245.js></script>
 <script src=IntData_246.js></script>
 <script src=IntData_247.js></script>
+<script src=IntData_248.js></script>
 
 <script>
 
