--- a/covid19reg.html
+++ b/covid19reg.html
@@ -278,6 +278,7 @@
 <script src=RegData_245.js></script>
 <script src=RegData_246.js></script>
 <script src=RegData_247.js></script>
+<script src=RegData_248.js></script>
 
 <script>
 
