--- a/covid19state.html
+++ b/covid19state.html
@@ -221,6 +221,7 @@
 <script src=USAData_245.js></script>
 <script src=USAData_246.js></script>
 <script src=USAData_247.js></script>
+<script src=USAData_248.js></script>
 
 <script>
 
