--- a/covid19usa.html
+++ b/covid19usa.html
@@ -246,6 +246,7 @@
 <script src=USAData_245.js></script>
 <script src=USAData_246.js></script>
 <script src=USAData_247.js></script>
+<script src=USAData_248.js></script>
 
 <script>
 
