Updated date to 11/28/2020

--- a/covid19state.html
+++ b/covid19state.html
@@ -222,6 +222,7 @@
 <script src=USAData_246.js></script>
 <script src=USAData_247.js></script>
 <script src=USAData_248.js></script>
+<script src=USAData_249.js></script>
 
 <script>
 
