--- a/covid19int.html
+++ b/covid19int.html
@@ -279,6 +279,7 @@
 <script src=IntData_246.js></script>
 <script src=IntData_247.js></script>
 <script src=IntData_248.js></script>
+<script src=IntData_249.js></script>
 
 <script>
 
