--- a/covid19reg.html
+++ b/covid19reg.html
@@ -279,6 +279,7 @@
 <script src=RegData_246.js></script>
 <script src=RegData_247.js></script>
 <script src=RegData_248.js></script>
+<script src=RegData_249.js></script>
 
 <script>
 
