Updated date to 11/28/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -280,6 +280,7 @@
 <script src=RegData_247.js></script>
 <script src=RegData_248.js></script>
 <script src=RegData_249.js></script>
+<script src=RegData_250.js></script>
 
 <script>
 
