--- a/covid19int.html
+++ b/covid19int.html
@@ -280,6 +280,7 @@
 <script src=IntData_247.js></script>
 <script src=IntData_248.js></script>
 <script src=IntData_249.js></script>
+<script src=IntData_250.js></script>
 
 <script>
 
