Updated data to 11/29/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -281,6 +281,7 @@
 <script src=IntData_248.js></script>
 <script src=IntData_249.js></script>
 <script src=IntData_250.js></script>
+<script src=IntData_251.js></script>
 
 <script>
 
