--- a/covid19reg.html
+++ b/covid19reg.html
@@ -281,6 +281,7 @@
 <script src=RegData_248.js></script>
 <script src=RegData_249.js></script>
 <script src=RegData_250.js></script>
+<script src=RegData_251.js></script>
 
 <script>
 
