--- a/covid19state.html
+++ b/covid19state.html
@@ -224,6 +224,7 @@
 <script src=USAData_248.js></script>
 <script src=USAData_249.js></script>
 <script src=USAData_250.js></script>
+<script src=USAData_251.js></script>
 
 <script>
 
