Updated data to 11/30/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -250,6 +250,7 @@
 <script src=USAData_249.js></script>
 <script src=USAData_250.js></script>
 <script src=USAData_251.js></script>
+<script src=USAData_252.js></script>
 
 <script>
 
