--- a/covid19int.html
+++ b/covid19int.html
@@ -282,6 +282,7 @@
 <script src=IntData_249.js></script>
 <script src=IntData_250.js></script>
 <script src=IntData_251.js></script>
+<script src=IntData_252.js></script>
 
 <script>
 
