--- a/covid19reg.html
+++ b/covid19reg.html
@@ -282,6 +282,7 @@
 <script src=RegData_249.js></script>
 <script src=RegData_250.js></script>
 <script src=RegData_251.js></script>
+<script src=RegData_252.js></script>
 
 <script>
 
