--- a/covid19state.html
+++ b/covid19state.html
@@ -225,6 +225,7 @@
 <script src=USAData_249.js></script>
 <script src=USAData_250.js></script>
 <script src=USAData_251.js></script>
+<script src=USAData_252.js></script>
 
 <script>
 
