Updated data to 12-01-2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -283,6 +283,7 @@
 <script src=IntData_250.js></script>
 <script src=IntData_251.js></script>
 <script src=IntData_252.js></script>
+<script src=IntData_253.js></script>
 
 <script>
 
