--- a/covid19reg.html
+++ b/covid19reg.html
@@ -283,6 +283,7 @@
 <script src=RegData_250.js></script>
 <script src=RegData_251.js></script>
 <script src=RegData_252.js></script>
+<script src=RegData_253.js></script>
 
 <script>
 
