--- a/covid19usa.html
+++ b/covid19usa.html
@@ -251,6 +251,7 @@
 <script src=USAData_250.js></script>
 <script src=USAData_251.js></script>
 <script src=USAData_252.js></script>
+<script src=USAData_253.js></script>
 
 <script>
 
