Updated data to 12/02/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -252,6 +252,7 @@
 <script src=USAData_251.js></script>
 <script src=USAData_252.js></script>
 <script src=USAData_253.js></script>
+<script src=USAData_254.js></script>
 
 <script>
 
