--- a/covid19int.html
+++ b/covid19int.html
@@ -284,6 +284,7 @@
 <script src=IntData_251.js></script>
 <script src=IntData_252.js></script>
 <script src=IntData_253.js></script>
+<script src=IntData_254.js></script>
 
 <script>
 
