--- a/covid19reg.html
+++ b/covid19reg.html
@@ -284,6 +284,7 @@
 <script src=RegData_251.js></script>
 <script src=RegData_252.js></script>
 <script src=RegData_253.js></script>
+<script src=RegData_254.js></script>
 
 <script>
 
