Updated data to 12/03/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -285,6 +285,7 @@
 <script src=IntData_252.js></script>
 <script src=IntData_253.js></script>
 <script src=IntData_254.js></script>
+<script src=IntData_255.js></script>
 
 <script>
 
