--- a/covid19reg.html
+++ b/covid19reg.html
@@ -285,6 +285,7 @@
 <script src=RegData_252.js></script>
 <script src=RegData_253.js></script>
 <script src=RegData_254.js></script>
+<script src=RegData_255.js></script>
 
 <script>
 
