--- a/covid19usa.html
+++ b/covid19usa.html
@@ -253,6 +253,7 @@
 <script src=USAData_252.js></script>
 <script src=USAData_253.js></script>
 <script src=USAData_254.js></script>
+<script src=USAData_255.js></script>
 
 <script>
 
