Updated data to 12-04-2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -286,6 +286,7 @@
 <script src=IntData_253.js></script>
 <script src=IntData_254.js></script>
 <script src=IntData_255.js></script>
+<script src=IntData_256.js></script>
 
 <script>
 
