--- a/covid19reg.html
+++ b/covid19reg.html
@@ -286,6 +286,7 @@
 <script src=RegData_253.js></script>
 <script src=RegData_254.js></script>
 <script src=RegData_255.js></script>
+<script src=RegData_256.js></script>
 
 <script>
 
