--- a/covid19state.html
+++ b/covid19state.html
@@ -229,6 +229,7 @@
 <script src=USAData_253.js></script>
 <script src=USAData_254.js></script>
 <script src=USAData_255.js></script>
+<script src=USAData_256.js></script>
 
 <script>
 
