--- a/covid19usa.html
+++ b/covid19usa.html
@@ -254,6 +254,7 @@
 <script src=USAData_253.js></script>
 <script src=USAData_254.js></script>
 <script src=USAData_255.js></script>
+<script src=USAData_256.js></script>
 
 <script>
 
