--- a/covid19int.html
+++ b/covid19int.html
@@ -287,6 +287,7 @@
 <script src=IntData_254.js></script>
 <script src=IntData_255.js></script>
 <script src=IntData_256.js></script>
+<script src=IntData_257.js></script>
 
 <script>
 
