--- a/covid19reg.html
+++ b/covid19reg.html
@@ -287,6 +287,7 @@
 <script src=RegData_254.js></script>
 <script src=RegData_255.js></script>
 <script src=RegData_256.js></script>
+<script src=RegData_257.js></script>
 
 <script>
 
