--- a/covid19usa.html
+++ b/covid19usa.html
@@ -255,6 +255,7 @@
 <script src=USAData_254.js></script>
 <script src=USAData_255.js></script>
 <script src=USAData_256.js></script>
+<script src=USAData_257.js></script>
 
 <script>
 
