Updated data to 12/06/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -288,6 +288,7 @@
 <script src=RegData_255.js></script>
 <script src=RegData_256.js></script>
 <script src=RegData_257.js></script>
+<script src=RegData_258.js></script>
 
 <script>
 
