--- a/covid19usa.html
+++ b/covid19usa.html
@@ -256,6 +256,7 @@
 <script src=USAData_255.js></script>
 <script src=USAData_256.js></script>
 <script src=USAData_257.js></script>
+<script src=USAData_258.js></script>
 
 <script>
 
