--- a/covid19int.html
+++ b/covid19int.html
@@ -288,6 +288,7 @@
 <script src=IntData_255.js></script>
 <script src=IntData_256.js></script>
 <script src=IntData_257.js></script>
+<script src=IntData_258.js></script>
 
 <script>
 
