--- a/covid19state.html
+++ b/covid19state.html
@@ -231,6 +231,7 @@
 <script src=USAData_255.js></script>
 <script src=USAData_256.js></script>
 <script src=USAData_257.js></script>
+<script src=USAData_258.js></script>
 
 <script>
 
