--- a/covid19int.html
+++ b/covid19int.html
@@ -289,6 +289,7 @@
 <script src=IntData_256.js></script>
 <script src=IntData_257.js></script>
 <script src=IntData_258.js></script>
+<script src=IntData_259.js></script>
 
 <script>
 
