--- a/covid19reg.html
+++ b/covid19reg.html
@@ -289,6 +289,7 @@
 <script src=RegData_256.js></script>
 <script src=RegData_257.js></script>
 <script src=RegData_258.js></script>
+<script src=RegData_259.js></script>
 
 <script>
 
