--- a/covid19state.html
+++ b/covid19state.html
@@ -232,6 +232,7 @@
 <script src=USAData_256.js></script>
 <script src=USAData_257.js></script>
 <script src=USAData_258.js></script>
+<script src=USAData_259.js></script>
 
 <script>
 
