Updated date to 12/08/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -290,6 +290,7 @@
 <script src=IntData_257.js></script>
 <script src=IntData_258.js></script>
 <script src=IntData_259.js></script>
+<script src=IntData_260.js></script>
 
 <script>
 
