--- a/covid19reg.html
+++ b/covid19reg.html
@@ -290,6 +290,7 @@
 <script src=RegData_257.js></script>
 <script src=RegData_258.js></script>
 <script src=RegData_259.js></script>
+<script src=RegData_260.js></script>
 
 <script>
 
