--- a/covid19usa.html
+++ b/covid19usa.html
@@ -258,6 +258,7 @@
 <script src=USAData_257.js></script>
 <script src=USAData_258.js></script>
 <script src=USAData_259.js></script>
+<script src=USAData_260.js></script>
 
 <script>
 
