Updated data to 12/09/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -259,6 +259,7 @@
 <script src=USAData_258.js></script>
 <script src=USAData_259.js></script>
 <script src=USAData_260.js></script>
+<script src=USAData_261.js></script>
 
 <script>
 
