--- a/covid19int.html
+++ b/covid19int.html
@@ -291,6 +291,7 @@
 <script src=IntData_258.js></script>
 <script src=IntData_259.js></script>
 <script src=IntData_260.js></script>
+<script src=IntData_261.js></script>
 
 <script>
 
