Updated data to 12/10/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -292,6 +292,7 @@
 <script src=IntData_259.js></script>
 <script src=IntData_260.js></script>
 <script src=IntData_261.js></script>
+<script src=IntData_262.js></script>
 
 <script>
 
