--- a/covid19reg.html
+++ b/covid19reg.html
@@ -292,6 +292,7 @@
 <script src=RegData_259.js></script>
 <script src=RegData_260.js></script>
 <script src=RegData_261.js></script>
+<script src=RegData_262.js></script>
 
 <script>
 
