--- a/covid19state.html
+++ b/covid19state.html
@@ -235,6 +235,7 @@
 <script src=USAData_259.js></script>
 <script src=USAData_260.js></script>
 <script src=USAData_261.js></script>
+<script src=USAData_262.js></script>
 
 <script>
 
