Updated data with 12/11/2020 and 12/12/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -293,6 +293,8 @@
 <script src=IntData_260.js></script>
 <script src=IntData_261.js></script>
 <script src=IntData_262.js></script>
+<script src=IntData_263.js></script>
+<script src=IntData_264.js></script>
 
 <script>
 
