--- a/covid19reg.html
+++ b/covid19reg.html
@@ -293,6 +293,8 @@
 <script src=RegData_260.js></script>
 <script src=RegData_261.js></script>
 <script src=RegData_262.js></script>
+<script src=RegData_263.js></script>
+<script src=RegData_264.js></script>
 
 <script>
 
