--- a/covid19state.html
+++ b/covid19state.html
@@ -236,6 +236,8 @@
 <script src=USAData_260.js></script>
 <script src=USAData_261.js></script>
 <script src=USAData_262.js></script>
+<script src=USAData_263.js></script>
+<script src=USAData_264.js></script>
 
 <script>
 
