Updated data with 12/13/2020 and 12/14/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -295,6 +295,8 @@
 <script src=IntData_262.js></script>
 <script src=IntData_263.js></script>
 <script src=IntData_264.js></script>
+<script src=IntData_265.js></script>
+<script src=IntData_266.js></script>
 
 <script>
 
