--- a/covid19reg.html
+++ b/covid19reg.html
@@ -295,6 +295,8 @@
 <script src=RegData_262.js></script>
 <script src=RegData_263.js></script>
 <script src=RegData_264.js></script>
+<script src=RegData_265.js></script>
+<script src=RegData_266.js></script>
 
 <script>
 
