--- a/covid19state.html
+++ b/covid19state.html
@@ -238,6 +238,8 @@
 <script src=USAData_262.js></script>
 <script src=USAData_263.js></script>
 <script src=USAData_264.js></script>
+<script src=USAData_265.js></script>
+<script src=USAData_266.js></script>
 
 <script>
 
