Updated data with 12/15/2020 and 12/16/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -297,6 +297,8 @@
 <script src=RegData_264.js></script>
 <script src=RegData_265.js></script>
 <script src=RegData_266.js></script>
+<script src=RegData_267.js></script>
+<script src=RegData_268.js></script>
 
 <script>
 
