--- a/covid19usa.html
+++ b/covid19usa.html
@@ -265,6 +265,8 @@
 <script src=USAData_264.js></script>
 <script src=USAData_265.js></script>
 <script src=USAData_266.js></script>
+<script src=USAData_267.js></script>
+<script src=USAData_268.js></script>
 
 <script>
 
