--- a/covid19int.html
+++ b/covid19int.html
@@ -297,6 +297,8 @@
 <script src=IntData_264.js></script>
 <script src=IntData_265.js></script>
 <script src=IntData_266.js></script>
+<script src=IntData_267.js></script>
+<script src=IntData_268.js></script>
 
 <script>
 
