Updated date to 12/17/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -299,6 +299,7 @@
 <script src=IntData_266.js></script>
 <script src=IntData_267.js></script>
 <script src=IntData_268.js></script>
+<script src=IntData_269.js></script>
 
 <script>
 
