--- a/covid19usa.html
+++ b/covid19usa.html
@@ -267,6 +267,7 @@
 <script src=USAData_266.js></script>
 <script src=USAData_267.js></script>
 <script src=USAData_268.js></script>
+<script src=USAData_269.js></script>
 
 <script>
 
