--- a/covid19reg.html
+++ b/covid19reg.html
@@ -299,6 +299,7 @@
 <script src=RegData_266.js></script>
 <script src=RegData_267.js></script>
 <script src=RegData_268.js></script>
+<script src=RegData_269.js></script>
 
 <script>
 
