--- a/covid19int.html
+++ b/covid19int.html
@@ -300,6 +300,7 @@
 <script src=IntData_267.js></script>
 <script src=IntData_268.js></script>
 <script src=IntData_269.js></script>
+<script src=IntData_270.js></script>
 
 <script>
 
