--- a/covid19reg.html
+++ b/covid19reg.html
@@ -300,6 +300,7 @@
 <script src=RegData_267.js></script>
 <script src=RegData_268.js></script>
 <script src=RegData_269.js></script>
+<script src=RegData_270.js></script>
 
 <script>
 
