--- a/covid19state.html
+++ b/covid19state.html
@@ -243,6 +243,7 @@
 <script src=USAData_267.js></script>
 <script src=USAData_268.js></script>
 <script src=USAData_269.js></script>
+<script src=USAData_270.js></script>
 
 <script>
 
