--- a/covid19usa.html
+++ b/covid19usa.html
@@ -268,6 +268,7 @@
 <script src=USAData_267.js></script>
 <script src=USAData_268.js></script>
 <script src=USAData_269.js></script>
+<script src=USAData_270.js></script>
 
 <script>
 
