Updated data to 12/19/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -301,6 +301,7 @@
 <script src=RegData_268.js></script>
 <script src=RegData_269.js></script>
 <script src=RegData_270.js></script>
+<script src=RegData_271.js></script>
 
 <script>
 
