--- a/covid19int.html
+++ b/covid19int.html
@@ -301,6 +301,7 @@
 <script src=IntData_268.js></script>
 <script src=IntData_269.js></script>
 <script src=IntData_270.js></script>
+<script src=IntData_271.js></script>
 
 <script>
 
