--- a/covid19state.html
+++ b/covid19state.html
@@ -244,6 +244,7 @@
 <script src=USAData_268.js></script>
 <script src=USAData_269.js></script>
 <script src=USAData_270.js></script>
+<script src=USAData_271.js></script>
 
 <script>
 
