Updated data to 12/20/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -302,6 +302,7 @@
 <script src=IntData_269.js></script>
 <script src=IntData_270.js></script>
 <script src=IntData_271.js></script>
+<script src=IntData_272.js></script>
 
 <script>
 
