--- a/covid19reg.html
+++ b/covid19reg.html
@@ -302,6 +302,7 @@
 <script src=RegData_269.js></script>
 <script src=RegData_270.js></script>
 <script src=RegData_271.js></script>
+<script src=RegData_272.js></script>
 
 <script>
 
