--- a/covid19state.html
+++ b/covid19state.html
@@ -245,6 +245,7 @@
 <script src=USAData_269.js></script>
 <script src=USAData_270.js></script>
 <script src=USAData_271.js></script>
+<script src=USAData_272.js></script>
 
 <script>
 
