Updated data to 12/22/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -304,6 +304,7 @@
 <script src=RegData_271.js></script>
 <script src=RegData_272.js></script>
 <script src=RegData_273.js></script>
+<script src=RegData_274.js></script>
 
 <script>
 
