--- a/covid19state.html
+++ b/covid19state.html
@@ -247,6 +247,7 @@
 <script src=USAData_271.js></script>
 <script src=USAData_272.js></script>
 <script src=USAData_273.js></script>
+<script src=USAData_274.js></script>
 
 <script>
 
