--- a/covid19int.html
+++ b/covid19int.html
@@ -304,6 +304,7 @@
 <script src=IntData_271.js></script>
 <script src=IntData_272.js></script>
 <script src=IntData_273.js></script>
+<script src=IntData_274.js></script>
 
 <script>
 
