Updated data to 12/23/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -305,6 +305,7 @@
 <script src=IntData_272.js></script>
 <script src=IntData_273.js></script>
 <script src=IntData_274.js></script>
+<script src=IntData_275.js></script>
 
 <script>
 
