--- a/covid19reg.html
+++ b/covid19reg.html
@@ -305,6 +305,7 @@
 <script src=RegData_272.js></script>
 <script src=RegData_273.js></script>
 <script src=RegData_274.js></script>
+<script src=RegData_275.js></script>
 
 <script>
 
