--- a/covid19usa.html
+++ b/covid19usa.html
@@ -273,6 +273,7 @@
 <script src=USAData_272.js></script>
 <script src=USAData_273.js></script>
 <script src=USAData_274.js></script>
+<script src=USAData_275.js></script>
 
 <script>
 
