Updated data to 12/24/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -306,6 +306,7 @@
 <script src=RegData_273.js></script>
 <script src=RegData_274.js></script>
 <script src=RegData_275.js></script>
+<script src=RegData_276.js></script>
 
 <script>
 
