--- a/covid19usa.html
+++ b/covid19usa.html
@@ -274,6 +274,7 @@
 <script src=USAData_273.js></script>
 <script src=USAData_274.js></script>
 <script src=USAData_275.js></script>
+<script src=USAData_276.js></script>
 
 <script>
 
