--- a/covid19int.html
+++ b/covid19int.html
@@ -306,6 +306,7 @@
 <script src=IntData_273.js></script>
 <script src=IntData_274.js></script>
 <script src=IntData_275.js></script>
+<script src=IntData_276.js></script>
 
 <script>
 
