Updated data to 12/25/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -307,6 +307,7 @@
 <script src=IntData_274.js></script>
 <script src=IntData_275.js></script>
 <script src=IntData_276.js></script>
+<script src=IntData_277.js></script>
 
 <script>
 
