--- a/covid19usa.html
+++ b/covid19usa.html
@@ -275,6 +275,7 @@
 <script src=USAData_274.js></script>
 <script src=USAData_275.js></script>
 <script src=USAData_276.js></script>
+<script src=USAData_277.js></script>
 
 <script>
 
