--- a/covid19reg.html
+++ b/covid19reg.html
@@ -307,6 +307,7 @@
 <script src=RegData_274.js></script>
 <script src=RegData_275.js></script>
 <script src=RegData_276.js></script>
+<script src=RegData_277.js></script>
 
 <script>
 
