Updated data to 12/26/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -308,6 +308,7 @@
 <script src=IntData_275.js></script>
 <script src=IntData_276.js></script>
 <script src=IntData_277.js></script>
+<script src=IntData_278.js></script>
 
 <script>
 
