--- a/covid19reg.html
+++ b/covid19reg.html
@@ -308,6 +308,7 @@
 <script src=RegData_275.js></script>
 <script src=RegData_276.js></script>
 <script src=RegData_277.js></script>
+<script src=RegData_278.js></script>
 
 <script>
 
