--- a/covid19state.html
+++ b/covid19state.html
@@ -251,6 +251,7 @@
 <script src=USAData_275.js></script>
 <script src=USAData_276.js></script>
 <script src=USAData_277.js></script>
+<script src=USAData_278.js></script>
 
 <script>
 
