--- a/covid19usa.html
+++ b/covid19usa.html
@@ -276,6 +276,7 @@
 <script src=USAData_275.js></script>
 <script src=USAData_276.js></script>
 <script src=USAData_277.js></script>
+<script src=USAData_278.js></script>
 
 <script>
 
