Updated data to 12/27/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -309,6 +309,7 @@
 <script src=RegData_276.js></script>
 <script src=RegData_277.js></script>
 <script src=RegData_278.js></script>
+<script src=RegData_279.js></script>
 
 <script>
 
