--- a/covid19usa.html
+++ b/covid19usa.html
@@ -277,6 +277,7 @@
 <script src=USAData_276.js></script>
 <script src=USAData_277.js></script>
 <script src=USAData_278.js></script>
+<script src=USAData_279.js></script>
 
 <script>
 
