--- a/covid19int.html
+++ b/covid19int.html
@@ -309,6 +309,7 @@
 <script src=IntData_276.js></script>
 <script src=IntData_277.js></script>
 <script src=IntData_278.js></script>
+<script src=IntData_279.js></script>
 
 <script>
 
