Updated data to 12/28/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -310,6 +310,7 @@
 <script src=IntData_277.js></script>
 <script src=IntData_278.js></script>
 <script src=IntData_279.js></script>
+<script src=IntData_280.js></script>
 
 <script>
 
