--- a/covid19reg.html
+++ b/covid19reg.html
@@ -310,6 +310,7 @@
 <script src=RegData_277.js></script>
 <script src=RegData_278.js></script>
 <script src=RegData_279.js></script>
+<script src=RegData_280.js></script>
 
 <script>
 
