--- a/covid19usa.html
+++ b/covid19usa.html
@@ -278,6 +278,7 @@
 <script src=USAData_277.js></script>
 <script src=USAData_278.js></script>
 <script src=USAData_279.js></script>
+<script src=USAData_280.js></script>
 
 <script>
 
