Updated data to 12/29/2020

--- a/covid19usa.html
+++ b/covid19usa.html
@@ -279,6 +279,7 @@
 <script src=USAData_278.js></script>
 <script src=USAData_279.js></script>
 <script src=USAData_280.js></script>
+<script src=USAData_281.js></script>
 
 <script>
 
