--- a/covid19int.html
+++ b/covid19int.html
@@ -311,6 +311,7 @@
 <script src=IntData_278.js></script>
 <script src=IntData_279.js></script>
 <script src=IntData_280.js></script>
+<script src=IntData_281.js></script>
 
 <script>
 
