--- a/covid19reg.html
+++ b/covid19reg.html
@@ -311,6 +311,7 @@
 <script src=RegData_278.js></script>
 <script src=RegData_279.js></script>
 <script src=RegData_280.js></script>
+<script src=RegData_281.js></script>
 
 <script>
 
