Updated data to 12/30/2020

--- a/covid19reg.html
+++ b/covid19reg.html
@@ -312,6 +312,7 @@
 <script src=RegData_279.js></script>
 <script src=RegData_280.js></script>
 <script src=RegData_281.js></script>
+<script src=RegData_282.js></script>
 
 <script>
 
