Updated data to 12/31/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -313,6 +313,7 @@
 <script src=IntData_280.js></script>
 <script src=IntData_281.js></script>
 <script src=IntData_282.js></script>
+<script src=IntData_283.js></script>
 
 <script>
 
