--- a/covid19reg.html
+++ b/covid19reg.html
@@ -313,6 +313,7 @@
 <script src=RegData_280.js></script>
 <script src=RegData_281.js></script>
 <script src=RegData_282.js></script>
+<script src=RegData_283.js></script>
 
 <script>
 
