--- a/covid19state.html
+++ b/covid19state.html
@@ -256,6 +256,7 @@
 <script src=USAData_280.js></script>
 <script src=USAData_281.js></script>
 <script src=USAData_282.js></script>
+<script src=USAData_283.js></script>
 
 <script>
 
