--- a/covid19int.html
+++ b/covid19int.html
@@ -314,6 +314,7 @@
 <script src=IntData_281.js></script>
 <script src=IntData_282.js></script>
 <script src=IntData_283.js></script>
+<script src=IntData_284.js></script>
 
 <script>
 
