--- a/covid19reg.html
+++ b/covid19reg.html
@@ -314,6 +314,7 @@
 <script src=RegData_281.js></script>
 <script src=RegData_282.js></script>
 <script src=RegData_283.js></script>
+<script src=RegData_284.js></script>
 
 <script>
 
