--- a/covid19state.html
+++ b/covid19state.html
@@ -257,6 +257,7 @@
 <script src=USAData_281.js></script>
 <script src=USAData_282.js></script>
 <script src=USAData_283.js></script>
+<script src=USAData_284.js></script>
 
 <script>
 
