--- a/covid19usa.html
+++ b/covid19usa.html
@@ -282,6 +282,7 @@
 <script src=USAData_281.js></script>
 <script src=USAData_282.js></script>
 <script src=USAData_283.js></script>
+<script src=USAData_284.js></script>
 
 <script>
 
