Updated data to 01/02/2020

--- a/covid19int.html
+++ b/covid19int.html
@@ -315,6 +315,7 @@
 <script src=IntData_282.js></script>
 <script src=IntData_283.js></script>
 <script src=IntData_284.js></script>
+<script src=IntData_285.js></script>
 
 <script>
 
