--- a/covid19reg.html
+++ b/covid19reg.html
@@ -315,6 +315,7 @@
 <script src=RegData_282.js></script>
 <script src=RegData_283.js></script>
 <script src=RegData_284.js></script>
+<script src=RegData_285.js></script>
 
 <script>
 
