--- a/covid19usa.html
+++ b/covid19usa.html
@@ -283,6 +283,7 @@
 <script src=USAData_282.js></script>
 <script src=USAData_283.js></script>
 <script src=USAData_284.js></script>
+<script src=USAData_285.js></script>
 
 <script>
 
